--- a/2.let和const命令.md
+++ b/2.let和const命令.md
@@ -1,16 +1,23 @@
 ## let命令
+let声明的变量只在它所在的代码块有效
 ```
-  {
-    let a = 10;
-    var b = 1;
-  }
-  // a
-  // ReferenceError: a is not defined.
-  // b
-  // 1
+{
+  let a = 10;
+  var b = 1;
+}
+// a
+// ReferenceError: a is not defined.
+// b
+// 1
 ```
-
-
+for循环的计数器，合适使用let命令
+```
+for (let i = 0; i < 10; i++) {
+  //...
+}
+// console.log(i);
+// ReferenceError: i is not defined
+```
 1. let 关键词声明的变量不具备变量提升（hoisting）特性
 2. let 和 const 声明只在最靠近的一个块中（花括号内）有效
 3. 当使用常量 const 声明时，请使用大写变量，如：CAPITAL_CASING
