--- a/2.let和const命令.md
+++ b/2.let和const命令.md
@@ -1,4 +1,5 @@
 ## let命令
+### 基本用法
 let声明的变量只在它所在的代码块有效
 ```
 {
@@ -18,7 +19,47 @@ for (let i = 0; i < 10; i++) {
 // console.log(i);
 // ReferenceError: i is not defined
 ```
+
+实例:重新认识for循环
+```var
+var a = [];
+for (var i = 0; i < 10; i++) {
+  a[i] = function () {
+    console.log(i);
+  };
+}
+a[6](); // 10
+```
+```let
+var a = [];
+for (var i = 0; i < 10; i++) {
+  a[i] = function () {
+    console.log(i);
+  };
+}
+a[6](); // 6
+```
+for循环的一个特别之:设置循环变量的那部分是一个父作用域，而循环体内部是一个单独的子作用域
+### 不存在变量提升 
 1. let 关键词声明的变量不具备变量提升（hoisting）特性
-2. let 和 const 声明只在最靠近的一个块中（花括号内）有效
-3. 当使用常量 const 声明时，请使用大写变量，如：CAPITAL_CASING
-  const 在声明时必须被赋值
+### 暂时性死区（temporal dead zone，简称 TDZ） -go know typeof
+```
+if (true) {
+  // TDZ开始
+  tmp = 'abc'; // ReferenceError
+  console.log(tmp); // ReferenceError
+
+  let tmp; // TDZ结束
+  console.log(tmp); // undefined
+
+  tmp = 123;
+  console.log(tmp); // 123
+}
+```
+ES6 规定暂时性死区和let、const语句不出现变量提升--以上是为了变量一定要在声明之后使用，否则就报错
+### 不允许重复声明
+
+
+## const
+当使用常量 const 声明时，请使用大写变量，如：CAPITAL_CASING
+const 在声明时必须被赋值
