块级作用域与函数声明

--- a/2.let和const命令.md
+++ b/2.let和const命令.md
@@ -1,4 +1,4 @@
-## let命令
+## 1.let命令
 ### 基本用法
 let声明的变量只在它所在的代码块有效
 ```
@@ -58,6 +58,101 @@ if (true) {
 ```
 ES6 规定暂时性死区和let、const语句不出现变量提升--以上是为了变量一定要在声明之后使用，否则就报错
 ### 不允许重复声明
+```
+// let不允许在相同作用域内，重复声明同一个变量。
+// 报错
+function func() {
+  let a = 10;
+  var a = 1;
+}
+
+// 报错
+function func() {
+  let a = 10;
+  let a = 1;
+}
+// let不允许在相同作用域内，重复声明同一个变量。
+function func(arg) {
+  let arg; // 报错
+}
+
+function func(arg) {
+  {
+    let arg; // 不报错
+  }
+}
+```
+## 2.块级作用域
+```
+  ES5只有全局作用域和函数作用域
+```
+### 为什么需要块级作用域？
+```
+第一种场景，内层变量可能会覆盖外层变量。
+var tmp = new Date();
+
+function f() {
+  console.log(tmp);
+  if (false) {
+    var tmp = 'hello world';
+  }
+}
+
+f(); // undefined
+变量提升，导致内层的tmp变量覆盖了外层的tmp变量。
+```
+```
+第二种场景，用来计数的循环变量泄露为全局变量。
+
+var s = 'hello';
+
+for (var i = 0; i < s.length; i++) {
+  console.log(s[i]);
+}
+
+console.log(i); // 5
+变量i只用来控制循环，但是循环结束后，它并没有消失，泄露成了全局变量。
+```
+###ES6 的块级作用域
+```实例
+function f1() {
+  let n = 5;
+  if (true) {
+    let n = 10;
+  }
+  console.log(n); // 5
+}
+```
+ES6 允许块级作用域的任意嵌套。
+```
+{{{{
+  {let insane = 'Hello World'}
+  console.log(insane); // 报错
+}}}};
+外层作用域无法读取内层作用域的变量
+{{{{
+  let insane = 'Hello World';
+  {let insane = 'Hello World'}
+}}}};
+内层作用域可以定义外层作用域的同名变量。
+```
+```
+  ES5:
+  广泛应用的立即执行函数表达式（IIFE）不再必要了
+  // IIFE 写法
+(function () {
+  var tmp = ...;
+  ...
+}());
+
+// 块级作用域写法
+{
+  let tmp = ...;
+  ...
+}
+```
+### 块级作用域与函数声明
+
 
 
 ## const
