声明变量 6种方法

--- a/2.let和const命令.md
+++ b/2.let和const命令.md
@@ -1,4 +1,4 @@
-## 1.let命令
+# 1.let命令
 ### 基本用法
 let声明的变量只在它所在的代码块有效
 ```
@@ -82,7 +82,7 @@ function func(arg) {
   }
 }
 ```
-## 2.块级作用域
+# 2.块级作用域
 ```
   ES5只有全局作用域和函数作用域
 ```
@@ -152,9 +152,110 @@ ES6 允许块级作用域的任意嵌套。
 }
 ```
 ### 块级作用域与函数声明
+```
+-问: 函数能不能在块级作用域之中声明？
+-答: ES5 规定，函数只能在顶层作用域和函数作用域之中声明，不能在块级作用域声明。
+```
+ES6 引入了块级作用域，明确允许在块级作用域之中声明函数。
+-->考虑到环境导致的行为差异太大，应该避免在块级作用域内声明函数。如果确实需要，也应该写成函数表达式，而不是函数声明语句。
+```
+// 函数声明语句
+{
+  let a = 'secret';
+  function f() {
+    return a;
+  }
+}
 
+// 函数表达式
+{
+  let a = 'secret';
+  let f = function () {
+    return a;
+  };
+}
+```
+-允许在块级作用域内声明函数。
+-函数声明类似于var，即会提升到全局作用域或函数作用域的头部。
+-同时，函数声明还会提升到所在的块级作用域的头部。
+注意，上面三条规则只对 ES6 的浏览器实现有效
+```
+// 浏览器的 ES6 环境
+function f() { console.log('I am outside!'); }
 
+(function () {
+  if (false) {
+    // 重复声明一次函数f
+    function f() { console.log('I am inside!'); }
+  }
 
-## const
-当使用常量 const 声明时，请使用大写变量，如：CAPITAL_CASING
-const 在声明时必须被赋值
+  f();
+}());
+// Uncaught TypeError: f is not a function
+```
+上面的代码在符合 ES6 的浏览器中，都会报错，因为实际运行的是下面的代码。
+```
+// 浏览器的 ES6 环境
+function f() { console.log('I am outside!'); }
+(function () {
+  var f = undefined;
+  if (false) {
+    function f() { console.log('I am inside!'); }
+  }
+
+  f();
+}());
+// Uncaught TypeError: f is not a function
+```
+
+# 3.const命令
+## 基本用法
+```
+1.const声明一个只读的常量。一旦声明，常量的值就不能改变。
+1.1 当使用常量 const 声明时，请使用大写变量，如：CAPITAL_CASING ? 
+const PI= 3.1415;
+PI // 3.1415
+PI = 3;
+// TypeError: Assignment to constant variable.
+2.const一旦声明变量，就必须立即初始化
+const foo;
+// SyntaxError: Missing initializer in const declaration
+3.const的作用域与let命令相同：只在声明所在的块级作用域内有效。
+if (true) {
+  const MAX = 5;
+}
+MAX // Uncaught ReferenceError: MAX is not defined
+4.const命令声明的常量也是不提升，同样存在暂时性死区，只能在声明的位置后面使用。
+if (true) {
+  console.log(MAX); // ReferenceError
+  const MAX = 5;
+}
+5.const声明的常量，也与let一样不可重复声明。
+var message = "Hello!";
+let age = 25;
+// 以下两行都会报错
+const message = "Goodbye!";
+const age = 30;
+```
+## 本质 
+| 数据类型 | 变量指向 | 数据结构 | 
+| - | :-: | -: | 
+| 简单（数值、字符串、布尔值） | 内存地址| 已固定 | 
+| 复合类型（主要是对象和数组） | 内存地址,但保存为一个指针 | 无法控制 | 
+
+将对象彻底冻结↓
+```
+var constantize = (obj) => {
+  Object.freeze(obj);
+  Object.keys(obj).forEach( (key, i) => {
+    if ( typeof obj[key] === 'object' ) {
+      constantize( obj[key] );
+    }
+  });
+};
+```
+## ES6 声明变量的六种方法
+ES5 var function
+ES6 let const import class
+
+# 4.顶层对象的属性
