--- a/2.let和const命令.md
+++ b/2.let和const命令.md
@@ -259,3 +259,42 @@ ES5 var function
 ES6 let const import class
 
 # 4.顶层对象的属性
+顶层对象，在浏览器环境指的是window对象，在 Node 指的是global对象。ES5 之中，顶层对象的属性与全局变量是等价的。
+```
+顶层对象的属性与全局变量挂钩，被认为是 JavaScript 语言最大的设计败笔之一。
+带来的问题:
+1. 无法在编译时就报出变量未声明的错误
+2. 无意中创建了全局变量
+3. 顶层对象的属性是全局都可以读取,不利于模块化编程
+4. 顶层对象是一个有实体含义的对象(指浏览器的窗口对象)
+```
+ES6，全局变量将逐步与顶层对象的属性脱钩(let命令、const命令、class命令声明的全局变量，不属于顶层对象的属性)
+```
+var a = 1;
+// 如果在 Node 的 REPL 环境，可以写成 global.a
+// 或者采用通用方法，写成 this.a
+window.a // 1
+
+let b = 1;
+window.b // undefined
+```
+## 5. global对象
+考虑所有情况,获取顶层对象的两种方法(勉强)
+```
+// 方法一
+(typeof window !== 'undefined'
+   ? window
+   : (typeof process === 'object' &&
+      typeof require === 'function' &&
+      typeof global === 'object')
+     ? global
+     : this);
+
+// 方法二
+var getGlobal = function () {
+  if (typeof self !== 'undefined') { return self; }
+  if (typeof window !== 'undefined') { return window; }
+  if (typeof global !== 'undefined') { return global; }
+  throw new Error('unable to locate global object');
+};
+```
